updating data merge logic