@@ -1,6 +1,10 @@
 package com.abdulbasit.adebayo.docparser.parser;
 
-import com.abdulbasit.adebayo.docparser.model.BrandRelease;
+import com.abdulbasit.adebayo.docparser.filter.BrandPriceFilter;
+import com.abdulbasit.adebayo.docparser.model.Brand;
+import com.abdulbasit.adebayo.docparser.model.Car;
+import com.abdulbasit.adebayo.docparser.model.CarBrand;
+import com.abdulbasit.adebayo.docparser.model.Price;
 import org.junit.jupiter.api.Test;
 import java.time.LocalDate;
 import java.util.List;
@@ -11,66 +15,66 @@ class DataMergerTest {
 
     @Test
     void mergeData_WithMatchingProduct_InheritsCsvDate() {
-        List<BrandRelease> csvData = List.of(
-            new BrandRelease("Toyota", "RAV4", LocalDate.of(2023, 1, 15), "v1.0")
+        List<Brand> csvData = List.of(
+                new Brand("Toyota", LocalDate.of(2023, 1, 15)),
+                        new Brand("Honda", LocalDate.of(2024, 1, 15))
         );
-        
-        List<BrandRelease> xmlData = List.of(
-            new BrandRelease("Toyota", "RAV4", LocalDate.of(2023, 6, 1), "v1.0")
+        List<Price> prices = List.of(new Price("EUR", 2900), new Price("GBP", 2100) );
+        List<Car> xmlData = List.of(
+                new Car("SUV", "RAV4", new Price("USD", 2900), prices ),
+                new Car("Truck", "CR-V", new Price("USD", 2900), prices)
         );
 
-        List<BrandRelease> result = merger.mergeData(csvData, xmlData, null);
+        List<CarBrand> result = merger.mergeData(csvData, xmlData, null);
         
         assertEquals(LocalDate.of(2023, 1, 15), result.get(0).releaseDate());
     }
 
     @Test
     void mergeData_WithFilter_FiltersResults() {
-        List<BrandRelease> csvData = List.of(
-            new BrandRelease("Toyota", "RAV4", LocalDate.of(2023, 1, 15), "v25000")
+        List<Brand> csvData = List.of(
+            new Brand("Toyota", LocalDate.of(2023, 1, 15) )
         );
-        
-        List<BrandRelease> xmlData = List.of(
-            new BrandRelease("Toyota", "RAV4", LocalDate.of(2023, 6, 1), "v25000"),
-            new BrandRelease("Honda", "CR-V", LocalDate.of(2023, 3, 1), "v18000")
+        List<Price> prices = List.of(new Price("EUR", 2900), new Price("GBP", 2100) );
+        List<Car> xmlData = List.of(
+            new Car("SUV", "RAV4", new Price("USD", 2900), prices ),
+            new Car("Truck", "CR-V", new Price("USD", 2900), prices)
         );
 
         BrandPriceFilter filter = new BrandPriceFilter("Toyota", 20000, 30000);
-        List<BrandRelease> result = merger.mergeData(csvData, xmlData, filter);
+        List<CarBrand> result = merger.mergeData(csvData, xmlData, filter);
         
         assertEquals(1, result.size());
-        assertEquals("Toyota", result.get(0).brandName());
+        assertEquals("Toyota", result.getFirst().brandType());
     }
 
     @Test
     void mergeData_WithMissingProduct_KeepsXmlDate() {
-        List<BrandRelease> csvData = List.of(
-            new BrandRelease("Toyota", "RAV4", LocalDate.of(2023, 1, 15), "v1.0")
-        );
-        
-        List<BrandRelease> xmlData = List.of(
-            new BrandRelease("Honda", "CR-V", LocalDate.of(2023, 3, 1), "v2.0")
+        List<Brand> csvData = List.of(
+            new Brand("Toyota", LocalDate.of(2023, 1, 15) )
         );
 
-        List<BrandRelease> result = merger.mergeData(csvData, xmlData);
-        
-        List<BrandRelease> result = merger.mergeData(csvData, xmlData, null);
+        List<Price> prices = List.of(new Price("EUR", 2900), new Price("GBP", 2100) );
+        List<Car> xmlData = List.of(
+                new Car("SUV", "RAV4", new Price("USD", 2900), prices )
+        );
+
+        List<CarBrand> result = merger.mergeData(csvData, xmlData, null);
         assertEquals(LocalDate.of(2023, 3, 1), result.get(0).releaseDate());
     }
 
     @Test
     void mergeData_WithNullXmlDate_UsesCsvDate() {
-        List<BrandRelease> csvData = List.of(
-            new BrandRelease("Toyota", "RAV4", LocalDate.of(2023, 1, 15), "v1.0")
-        );
-        
-        List<BrandRelease> xmlData = List.of(
-            new BrandRelease("Toyota", "RAV4", null, "v1.0")
+        List<Brand> csvData = List.of(
+                new Brand("Toyota", LocalDate.of(2023, 1, 15) )
         );
 
-        List<BrandRelease> result = merger.mergeData(csvData, xmlData);
-        
-        List<BrandRelease> result = merger.mergeData(csvData, xmlData, null);
+        List<Price> prices = List.of(new Price("EUR", 2900), new Price("GBP", 2100) );
+        List<Car> xmlData = List.of(
+                new Car("SUV", "RAV4", new Price("USD", 2900), prices )
+        );
+
+        List<CarBrand> result = merger.mergeData(csvData, xmlData, null);
         assertEquals(LocalDate.of(2023, 1, 15), result.get(0).releaseDate());
     }
 }
